# teht2

./: .gitignore  README.md  pyproject.toml
osa2/: pyproject.toml
osa2/nhl-statistics-1/src/: statistics_service.py
osa2/nhl-statistics-1/src/tests/: statistics_service_test.py
osa2/poetry-web/: pyproject.toml
osa2/poetry-web/src/: index.py
osa3/hello-docker/: Dockerfile  hello.py
osa3/hello-robot/: log.html  output.xml  report.html
osa4/: retro.md
osa4/maksukortti-mock/src/: kassapaate.py
osa4/maksukortti-mock/src/tests/: kassapaate_test.py
